test/FAIL/dispcmd/invalid_arguments/12_test_disp.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="not a registre"
#-------

disp reg $64